--- a/research.html
+++ b/research.html
@@ -28,7 +28,31 @@
 	<h2>Papers and Preprints</h2>
 	<p><a href="Unoriented Links and the Jones Polynomial.pdf" target="_blank">Unoriented Links and the Jones Polynomial</a></h5> (with S. Ganzell, J. Huffman, K. Tademy, G. Walker) Involve, a Journal of Mathematics Vol. 12 (2019) pg. 1357-1367.</p>
   <p><a href="Integral Metaplectic Modular Categories.pdf" target="_blank"> Integral metaplectic modular categories</a></h5> (with A. Deaton, P. Gustafson, E.C.Rowell, S. Poltorastski, S. Timmerman, B. Warren, Q. Zhang) Journal of Knot Theory and Its Ramifications Vol. 29, No. 5 (2020).</p>
-</div> <!--left container-->
+</div>
+
+<div class="main">
+	<h2>Conference Talks</h2>
+	<p> A Branched Manifold for Spherical Geometry (Topology Student Workshop, Georgia Tech, July 2022)  </p>
+	</div>
+
+  <div class="main">
+  	<h2>Talks at UC Santa Barbara</h2>
+  	<p> A Universal Branched Manifold for Spherical Geometry (Advancement to Candiacy Talk, April 2022) </p>
+    <p> A Universal Branched Manifold in Dimension 2 and 3 (Graduate Topology Seminar, November 2022) </p>
+  	</div>
+
+    <div class="main">
+      <h2>Undergraduate Talks</h2>
+      <p> The Aftermath: Optimizing Medical Resource Allocation via Quadcopter Post-Disaster, Winner of Best Poster Presentation Award (Erickson Conference, Seattle Pacific University, May 2019) </p>
+      <p> Knot Theory and the 2-Variable Kauffman Polynomial, Winner of Best Oral Presentation Award (Erickson Conference, Seattle Pacific University, May 2019).</p>
+      <p> Integer Metapletic Modular Categories (REU Presentation, Texas A&M University, July 2018) </p>
+      <p> Knot Theory: A Polynomial for Unoriented Links, (NUMS, Western Washington University, October 2017) </p>
+      <p> Knot Theory: A Polynomial for Unoriented Links, Winner of Best Undergraduate Talk Award (PNW MAA, Gonzaga University, June 2017) </p>
+      <p> Knot Theory: A Polynomial for Unoriented Links, Winner of Best Poster Presentation Awar (Erickson Conference, Seattle Pacific University, April 2017) </p>
+      <p> Knot Theory: A Polynomial for Unoriented Links (REU Presentation, St. Marys College of Maryland, July 2016) </p>
+      </div>
+
+    <!--left container-->
 
  <!--right container-->
 
