--- a/teaching.html
+++ b/teaching.html
@@ -24,12 +24,12 @@
 </a>
 </div>
 <div class="main">
-	<h2>UCSB Teaching Associate</h2>
-	<p> I am teaching Math 3B: Integral Calculus during Session B of Summer 2022. More info to come.</p>
+	<h2>UC Santa Barbara Instructor of Record</h2>
+	<p> Math 3B: Integral Calculus (Summer Session B)</p>
 	</div>
 <div class="main">
-	<h2>UCSB Teaching Assistant</h2>
-	<p>Math 2B: Integral Calculus with Algebra and Trigonometry (Winter 2020)</p>
+<h2>UCSB Teaching Assistant</h2>
+<p>Math 2B: Integral Calculus with Algebra and Trigonometry (Winter 2020)</p>
 <p>Math 3A: Differential Calculus (Fall 2019)</p>
 <p>Math 34B: Integral Calculus for the Social and Life Sciences (Spring 2020 online)</p>
 <p>Math 4B: Differential Equations (Spring 2021 online, head TA)</p>
@@ -39,7 +39,7 @@ Summer 2021 online; Fall 2021; Winter 2022)</p>
 
 <div class="main">
 	<h2>UCSB SIMS Program Instructor </h2>
-	<p>I was the SIMS Math 3B Instructor for the Summer 2021 and will be the instructor again for Summer 2022. More info can be found here: <a href = "https://sims-csep.cnsi.ucsb.edu/" target = "_blank">https://sims-csep.cnsi.ucsb.edu/</a></p>
+<p>	The Summer Institute in Mathematics and Science (SIMS) is a 3-week program for incoming first-year UCSB students. I've participated as the Math 3B Instructor in Summer 2021 and will be returning again in Summer 2022. More info can be found here: <a href = "https://sims-csep.cnsi.ucsb.edu/" target = "_blank">https://sims-csep.cnsi.ucsb.edu/</a></p>
 </div>
 <!--right container-->
 
