--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <a href="#home" class="active">Home</a>
 <a href="teaching.html">Teaching</a>
 <a href="research.html">Research</a>
+<a href="outreach.html">Outreach</a>
 <a href="javascript:void(0);" class="icon" onclick="myFunction()">
   <i class="fa fa-bars"></i>
 </a>
@@ -59,8 +60,8 @@
     <h5>&nbsp;&nbsp;&nbsp;Office: South Hall 6432G</h5>
     <h5>&nbsp;&nbsp;&nbsp;Email: lmavrakis@math.ucsb.edu</h5>
     <h5>&nbsp;&nbsp;&nbsp;Curriculum Vitae: <a href="CV.pdf" target="_blank">CV</a></h5>
-    <p> &nbsp;&nbsp;I am interested in low dimensional topology. </p>
-     <p> &nbsp;&nbsp;Right now I am studying 3-manifolds and branched 3-manifolds. My advisor is Daryl Cooper. </p>
+    <p> &nbsp;&nbsp;I am interested in low dimensional topology. I am a co-organizer of the UCSB Graduate Topology Seminar. </p>
+     <p> &nbsp;&nbsp;I am particularly interested in 3-manifolds and branched 3-manifolds. My advisor is Daryl Cooper. </p>
   </div>
 </div>
 
