--- a/teaching.html
+++ b/teaching.html
@@ -19,27 +19,29 @@
 <a href="index.html">Home</a>
 <a href="teaching.html" class="active">Teaching</a>
 <a href="research.html">Research</a>
+<a href="outreach.html">Outreach</a>
 <a href="javascript:void(0);" class="icon" onclick="myFunction()">
   <i class="fa fa-bars"></i>
 </a>
 </div>
 <div class="main">
-	<h2>UC Santa Barbara Instructor of Record</h2>
+	<h2>UCSB Instructor of Record</h2>
 	<p> Math 3B: Integral Calculus (Summer Session B)</p>
 	</div>
 <div class="main">
 <h2>UCSB Teaching Assistant</h2>
 <p>Math 2B: Integral Calculus with Algebra and Trigonometry (Winter 2020)</p>
 <p>Math 3A: Differential Calculus (Fall 2019)</p>
+<p>Math 3B: Integral Calculus (Winter 2023)</p>
 <p>Math 34B: Integral Calculus for the Social and Life Sciences (Spring 2020 online)</p>
 <p>Math 4B: Differential Equations (Spring 2021 online, head TA)</p>
 <p>Math 8: Transition to Higher Mathematics (Summer 2020 online; Fall 2020 online; Winter 2021 online;
-Summer 2021 online; Fall 2021; Winter 2022)</p>
+Summer 2021 online; Fall 2021; Winter 2022, Fall 2022)</p>
 </div> <!--left container-->
 
 <div class="main">
 	<h2>UCSB SIMS Program Instructor </h2>
-<p>	The Summer Institute in Mathematics and Science (SIMS) is a 3-week program for incoming first-year UCSB students. I've participated as the Math 3B Instructor in Summer 2021 and will be returning again in Summer 2022. More info can be found here: <a href = "https://sims-csep.cnsi.ucsb.edu/" target = "_blank">https://sims-csep.cnsi.ucsb.edu/</a></p>
+<p>	The Summer Institute in Mathematics and Science (SIMS) is a 3-week program for incoming first-year UCSB students. I was the Math 3B Instructor in Summer 2021 and Summer 2022. More info can be found here: <a href = "https://sims-csep.cnsi.ucsb.edu/" target = "_blank">https://sims-csep.cnsi.ucsb.edu/</a></p>
 </div>
 <!--right container-->
 
