--- a/research.html
+++ b/research.html
@@ -17,6 +17,7 @@
 <a href="index.html">Home</a>
 <a href="teaching.html">Teaching</a>
 <a href="research.html" class="active">Research</a>
+<a href="outreach.html">Outreach</a>
 <a href="javascript:void(0);" class="icon" onclick="myFunction()">
   <i class="fa fa-bars"></i>
 </a>
